updated endpoints documentation
